--- a/code/style.css
+++ b/code/style.css
@@ -1,10 +1,30 @@
 /*Styling for mobile phone*/
 
 html {
-  background: #0025ff;
-  color: #fff;
+  background-image: url("/images/material-birchwood.svg");
+  color: rgb(43, 36, 23);
 }
 
+header {
+  display:block;
+  /*Maybe replace to width: 100%*/
+}
+
+.logo-and-title {
+display: flex;
+justify-content: flex-start;
+
+}
+
+.logo {
+  width: 60px;
+}
+
+
+.navlink {
+  display:block;
+  text-align: center;
+}
 section {
   background-color: red;
 }
