--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,137 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #7886d6;
+  color: rgb(42, 12, 92);
+}
+
+
+body {
+  flex-direction : row
+}
+
+img {
+  width: 90%;
+  height: 100%;
+  align-items: center;
+  margin: 5px;
+
+}
+
+@media(min-width: 415px) and (max-width: 1024px) {
+  body{
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  img {
+    
+    
+    width: 90%;
+    height:90%;
+    align-items: center;
+    margin: 5px;
+
+  }
+}
+
+
+
+@media(min-width: 340px) and (max-width:414px) {
+  body{
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  img {
+    
+
+    width: 90%;
+    height: 90%;
+    align-items: center;
+   }
+
+
+}
+
+
+*/
+
+@media(min-width: 1024px) {
+  body{
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  img {
+    width: 40%;
+    height:20%;
+    align-items: center;
+   }
+
+
+}
+
+
+
+.image-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-self: center;
+}
+
+
+
+.big-news {
+  border: 2px solid red;
+  height: 20%;
+  display : flex;
+  justify-content: center space-between 2px space-around 2px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 5px;
+  display: flex;
+}
+
+.big-news-child {
+  border: 2px solid black;
+  
+  margin: 5px;
+  width: 200px;
+  height: 10%;
+  margin: 5px;
+  padding: 5px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex-grow: 1;
+}
+
+
+
+
+.big {
+  padding: 5px;
+  
+  
+  flex-grow: 1;
+
+}
+
+
+.flex-parent {
+  border: 2px solid blue;
+  height: 500px;
+  display : flex;
+  justify-content: center space-between 2px space-around 2px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 5px;
+}
+
+
+.flex-child {
+  border: 2px solid black;
+  
+  margin: 5px;
+  width: 200px;
+  height: 100px;
+  flex-grow: 1;
+
+
 }
