hover effects on image links

--- a/code/style.css
+++ b/code/style.css
@@ -98,6 +98,25 @@ a h3:hover {
 }
 
 
+
+
+a #img-big:hover {
+  opacity: 0.5;
+}
+
+a #first:hover{
+  opacity: 0.5;
+}
+a #second:hover{
+  opacity: 0.5;
+}
+a #third:hover{
+  opacity: 0.5;
+}
+a #fourth:hover{
+  opacity: 0.5;
+}
+
 .big-news {
   display: flex;
   flex-wrap: wrap;
