--- a/code/style.css
+++ b/code/style.css
@@ -59,7 +59,7 @@ header h1 {
 nav {
   display: flex;
   width: 100%;
-  height:20px;
+  height: 25px;
   align-items: center;
   justify-content: space-between;
   border-bottom: solid #f1df77 1px;
@@ -68,15 +68,42 @@ nav {
   z-index: 1;
 }
 
-nav a {
-  display: block;
-  border: none;
-  text-align: center;
-  font-size: 11px;
-  color: #f1df77;
+#checkbox, #searchbox {
+  visibility: hidden;
+}
+
+.menu-button {
+  position: fixed;
+  width: 30px;
+  height: 3px;
+  margin: 5px;
+  display: none;
+  border-bottom: double rgba(255, 230, 0, 0.671) 10px;
+  border-top: double rgba(255, 230, 0, 0.671) 10px;
+  border-left: none;
+  border-right: none;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 16px;
+}
+
+.menu-content {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: absolute;
+  z-index: 1;
+  min-width: 130px;
+}
+
+.menu-content a {
+  width: 100%;
   text-decoration: none;
-  width:100%;
-  padding: 3px 10px 3px 10px;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 12px;
+  color: rgba(239, 240, 173, 0.966);
+  text-align: left;
+  padding: 5px 0 5px 0;
 }
 
 nav a:hover {
@@ -96,6 +123,7 @@ nav a:active {
   float: right;
   height: 20px;
   width: 30px;
+  margin: 3px;
   background: rgba(255, 208, 0, 0.39);
   border-bottom:  solid #f1df7700 1px;
 }
@@ -178,6 +206,7 @@ nav input[type="text"]:focus {
   max-width: 100%;
   object-fit: cover;
 }
+
 .small-img-container:hover {
   transform: rotateY(360deg);
   transition: all 0.3s ease-in-out 0s;
@@ -298,12 +327,62 @@ h3:hover, p:hover {
     grid-template: repeat(6, 1fr) / repeat(1, 130px 1fr);
   }
 
-  .searchbar {
-    width: 100px;
+  .search-button{
+    position: fixed;
+    right: 0;
+    top: 0;
+    height: 30px;
+    width: 35px;
   }
 
-  nav a {
-    padding-right: 5px;
+  .searchbar {
+    position: fixed;
+    right: 36px;
+    height: 34px;
+    visibility: hidden;
+    top: 2px;
+  }
+
+  #searchbox:checked ~ .searchbar {
+    visibility: visible;
+  }
+
+  nav {
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+  }
+
+  .menu-button {
+    display: block;
+    left: 0;
+    top: 0;
+    }
+
+  .menu-content {
+    visibility: hidden;
+    height: 0px;
+    max-width: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    position: fixed;
+    margin: 5px;
+    top: 30px;
+  }
+  
+  .menu-content a {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    flex: 1.5;
+  }
+ 
+
+  #checkbox:checked ~ .menu-content {
+    visibility: visible;
+    background-color: rgba(0, 0, 0, 0.671);
+    height: 400px;
   }
   
   header h1 {
