--- a/code/style.css
+++ b/code/style.css
@@ -2,6 +2,8 @@ html {
   background: #ffffff;
   color:grey;
 }
+
+
 .header {
   background-image: url("https://images.unsplash.com/photo-1497105943914-b90d55145023?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1270&q=80");
   background-repeat: no-repeat;
@@ -28,7 +30,7 @@ html {
     display: flex;
     justify-content: flex-end;
     width: 100%;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, sans-serif;
     font-weight: bolder;
     font-size: 20px;
     color: #835F80;
@@ -62,6 +64,16 @@ html {
   .main {
     background-color: #C5E3D5;
     padding-top: 40px;
+    font-family: verdana, sans-serif;
+    
+    }
+
+    #big-news-h1 {
+      font-family: 'Yusei Magic', sans-serif;
+    }
+
+    .other-news h3 {
+      font-family: 'Yusei Magic', sans-serif;
     }
   
   /*effekter länkar*/
