--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,70 @@
 html {
-  background: #0025ff;
+  background: #0025ff; 
   color: #fff;
 }
+
+.desktop-box {
+border: 4px black double;
+border-radius: 5%;
+display: flex;
+justify-content: center;
+margin:70px;
+flex-direction: column;
+
+/* * * * KOM IHÅG ATT PUSH/Commit TO GIT * * * */ 
+
+
+}
+
+/* HEADER */
+
+header{
+
+  background: rgb(29, 25, 25);
+  height: 80px;
+  padding: 0px;
+  display: flex;
+  margin: -8px;
+
+}
+
+header img {
+
+  width: 40px;
+  height: 40px;
+}
+
+/* BIG NEWS */
+/* Skriver man båda, så gäller regeln för båda */
+h1,
+h2 {
+  font-family: helvetica;
+
+}
+
+/*SMALL NEWS*/
+.small-news {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  
+}
+
+.small-news a {
+  border: 2px solid black;
+  display: flex;
+  background: whitesmoke;  
+  justify-content: space-between;  
+}
+
+.small-news a:hover{
+
+  border: 4px solid black;
+
+}
+.small-news img{
+width:200px;
+height:200px;
+}
+
+/* NEW Grid */
