--- a/code/style.css
+++ b/code/style.css
@@ -7,7 +7,7 @@ body {
   color: #171717;
 }
 
-/* Banner */
+/*** Banner ***/
 .banner {
   background-color: #171717;
   padding: 8px 0;
@@ -25,7 +25,7 @@ body {
   color: #FF13A7;
 }
 
-/* Navbar */
+/*** Navbar ***/
 .menu {
   display: flex;
   justify-content: space-between;
@@ -57,10 +57,11 @@ body {
   display: none;
 }
 
-/* Big News */
+/*** Big News ***/
 .big-news {
   height: 780px;
   border-bottom: 1px solid #17171768;
+  background-color: #f3f1ee;
 }
 
 .big-news .img-container {
@@ -95,34 +96,36 @@ body {
   opacity: 0.9;
 }
 
-.big-news h1 {
+.big-news .big-news-text h1 {
   color: #171717;
-  text-align: center; 
-  font-size: 40px;
+  font-size: 35px;
   font-family: 'Indie Flower', cursive;
-}
+  text-decoration: none;
+  text-align: center;
+  margin: 0;
+ }
 
-.big-news h1:hover {
+.big-news a:hover {
   text-decoration: underline;
-  color: #171717;
+  
 }
 
 .big-news .big-news-text p {
-  padding: 5px 40px;
+  padding: 0 40px;
   text-align: justify;
   font-size: 16px;
   color: rgba(23, 23, 23, 0.7);
 }
 
-/* Other news */
+/*** Other news ***/
 #news-header {
   text-align: center;
-  font-size: 40px;
+  font-size: 35px;
   font-family: 'Indie Flower', cursive;
 }
 
 .grid-container {
-  margin: 40px 20px;
+  margin: 0 20px;
 }
 
 .grid-container .item {
@@ -143,7 +146,7 @@ body {
   transition: .5s ease;
   opacity: 0;
   position: absolute;
-  top: 50%;
+  top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -158,15 +161,15 @@ body {
   opacity: 1;
 }
 
-/*Direction icon*/
+/*** Direction icon ***/
 .direction-icon .fas{
   color: #f9f9f9; 
   background-color: #FF13A7;
-  margin-bottom: -20px;
+  margin-bottom: -10px;
   margin-left: 50%;
 }
 
-/* Footer */
+/*** Footer ***/
 .footer {
   background-color: #171717;
   height: 100px;
