--- a/code/style.css
+++ b/code/style.css
@@ -142,6 +142,10 @@ nav {
   /*padding-right:15px;*/
 }
 
+.news a div {
+  padding: 15px;
+}
+
 /*** Styling the footer ***/
 
 footer {
@@ -234,6 +238,7 @@ footer {
 
   .big-news div {
     text-align: left;
+    padding: 15px;
   }
 
   .news-container {
@@ -243,13 +248,13 @@ footer {
     justify-content: flex-start;
     flex-wrap: wrap;
     /*Add margin?*/
-    height: 1900px;
+    /*max-height:2000px;*/
   }
 
   .news {
     flex-direction: column;
     /*align-items: center; remove this? */
-    flex-basis: 40%;
+    flex-basis: 38%;
     justify-content: flex-start;
     margin-right: 20px;
     text-align: left;
